--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <title> </title>
     </head>
     <body>
-    <h1>Hallo Welt</h1>
-    </body>
+    <button id="start">Start</button>
+    <button id="stopp">Stopp</button>
+    <h1>Tracker</h1>
+    <div id="cur_pos"></div>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="js/index.js"></script>
+</body>
 </html>
