--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
     <button id="start">Start</button>
     <button id="stopp">Stopp</button>
-    <button id="save">Save Data in local Storage</button>
+    <button id="gesamt">Gesamtstrecke</button>
     <h1>Tracker</h1>
     <div id="cur_pos"></div>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
