method getPerX implemented

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <button id="gesamt">Gesamtstrecke</button>
     <h1>Tracker</h1>
     <div id="cur_pos"></div>
+    <button id="testmonth">test month</button>
+    <button id="testminutes">test minutes</button>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="js/index.js"></script>
 </body>
