--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+        <meta charset="utf-8" />
+        <meta name="format-detection" content="telephone=no" />
+        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <title>Tracker</title>
     </head>
     <body>
-    <button id="start">Start</button>
-    <button id="stopp">Stopp</button>
-    <button id="gesamt">Gesamtstrecke</button>
-    <h1>Tracker</h1>
-    <div id="cur_pos"></div>
-    <button id="testmonth">test month</button>
-    <button id="testminutes">test minutes</button>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="js/index.js"></script>
-</body>
+      <button id="start">Start</button>
+      <button id="stopp">Stopp</button>
+      <button id="gesamt">Gesamtstrecke</button>
+      <h1>Tracker</h1>
+      <div id="cur_pos"></div>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript">
+            app.initialize();
+        </script>
+    </body>
 </html>
