Removing some Debugging Data
Lat and Long Data don't need to display on the screen. Made one button
from start and stop.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
         <title>Tracker</title>
     </head>
     <body>
-      <button id="start">Start</button>
-      <button id="stopp">Stopp</button>
+      <button id="startstop">Start</button>
       <button id="gesamt">Gesamtstrecke</button>
-      <h1>Tracker</h1>
       <div id="cur_pos"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery.js"></script>
