--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>Tracker</title>
     </head>
-    <body>
-      <button id="startstop">Start</button>
-      <button id="gesamt">Gesamtstrecke</button>
-      <div id="cur_pos"></div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/app.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
+    <body ng-app="tracker">
+      <div ng-controller="TrackerController as tracker">
+        <button id="startstop" ng-click="tracker.toogle()">{{ tracker.button }}</button>
+        <button id="gesamt" ng-click="tracker.getGesamt()">Gesamtstrecke</button>
+        <div id="cur_pos">{{ tracker.gesamtstrecke }} : {{ tracker.count }}</div>
+      </div>
+
+      <script type="text/javascript" src="cordova.js"></script>
+      <script type="text/javascript" src="js/angular.js"></script>
+      <script type="text/javascript" src="js/index2.js"></script>
+      <script type="text/javascript" src="js/app.js"></script>
+      <script type="text/javascript">
+          app.initialize();
+      </script>
     </body>
 </html>
