--- a/index.html
+++ b/index.html
@@ -5,22 +5,37 @@
         <meta name="format-detection" content="telephone=no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <link rel="stylesheet" type="text/css" href="css/ionic.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>Tracker</title>
     </head>
     <body ng-app="tracker">
-      <div ng-controller="TrackerController as tracker">
-        <button id="startstop" ng-click="tracker.toogle()">{{ tracker.button }}</button>
-        <button id="gesamt" ng-click="tracker.getGesamt()">Gesamtstrecke</button>
-        <div id="cur_pos">{{ tracker.gesamtstrecke }} : {{ tracker.count }}</div>
-      </div>
+        <ion-side-menu-content ng-controller="TrackerController as tracker">
 
-      <script type="text/javascript" src="cordova.js"></script>
-      <script type="text/javascript" src="js/angular.js"></script>
-      <script type="text/javascript" src="js/index2.js"></script>
-      <script type="text/javascript" src="js/app.js"></script>
-      <script type="text/javascript">
+            <h1 class="center">Tracker</h1>
+
+          <ion-content>
+            <button  ng-click="tracker.toogle()" ng-class="(tracker.button === 'Start') ? 'button-balanced' : 'button-assertive'" class="button button-block">{{ tracker.button }}</button>
+            <button class="button button-block button-positive" ng-click="tracker.getGesamt()"><i class="icon icon-plus">Gesamtstrecke</i></button>
+            <div id="cur_pos">{{ tracker.gesamtstrecke }} : {{ tracker.count }}</div>
+            <!-- our list and list items -->
+            <ion-list>
+              <ion-item ng-repeat="task in tasks">
+                {{task.title}}
+              </ion-item>
+            </ion-list>
+          </ion-content>
+          <ion-footer-bar class="bar">
+            <h2 class="title"><i class="icon ion-person-stalker">The Tracker-Team &copy; 2014</i></h2>
+          </ion-header-bar>
+        </ion-side-menu-content>
+
+        <script type="text/javascript" src="js/ionic.bundle.min.js"></script>
+        <script type="text/javascript" src="js/index2.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript">
           app.initialize();
-      </script>
+        </script>
     </body>
 </html>
